stretching fix
stretching fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -607,7 +607,7 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  height: inherit !important;
 }
 
 .img-thumbnail {
@@ -6012,6 +6012,7 @@ textarea.form-control-lg {
   display: none;
   float: left;
   width: 100%;
+  height: inherit;
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
